// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Locale api createLocale creates new locale and returns locale data 1`] = `
Object {
  "code": "ru",
  "created_at": "2021-09-30T08:33:26Z",
  "default": false,
  "id": "38dbf68906d0e5ab468eaef7d6d1a8ae",
  "main": false,
  "name": "Russian",
  "plural_forms": Array [
    "zero",
    "one",
    "few",
    "many",
    "other",
  ],
  "rtl": false,
  "source_locale": null,
  "statistics": Object {
    "keys_total_count": 18,
    "keys_untranslated_count": 0,
    "missing_words_count": 23,
    "translations_completed_count": 0,
    "translations_unverified_count": 0,
    "unverified_words_count": 0,
    "words_total_count": 0,
  },
  "updated_at": "2021-09-30T08:33:26Z",
}
`;

exports[`Locale api getLocale returns single locale data 1`] = `
Object {
  "code": "en-US",
  "created_at": "2021-09-27T15:28:43Z",
  "default": true,
  "id": "0cd76a74f8850878c9e1ac09fa22925e",
  "main": false,
  "name": "en-US",
  "plural_forms": Array [
    "zero",
    "one",
    "other",
  ],
  "rtl": false,
  "source_locale": null,
  "statistics": Object {
    "keys_total_count": 18,
    "keys_untranslated_count": 0,
    "missing_words_count": null,
    "translations_completed_count": 18,
    "translations_unverified_count": 0,
    "unverified_words_count": 0,
    "words_total_count": 23,
  },
  "updated_at": "2021-09-27T15:28:43Z",
}
`;

exports[`Locale api listAccountLocales returns all locales for a specified account 1`] = `
Array [
  Object {
    "code": "ar-MA",
    "id": "2ef1309cdd0b10a35b3978340ed2a8b7",
    "name": "ar-MA",
    "project": Object {
      "created_at": "2021-09-27T15:28:39Z",
      "id": "77617b5199af590fde8642fb4178eaa1",
      "main_format": null,
      "name": "My Demo Application",
      "updated_at": "2021-09-30T08:56:25Z",
    },
  },
  Object {
    "code": "de-DE",
    "id": "4fafad4eb6557baf38d185cbd8511a39",
    "name": "de-DE",
    "project": Object {
      "created_at": "2021-09-27T15:28:39Z",
      "id": "77617b5199af590fde8642fb4178eaa1",
      "main_format": null,
      "name": "My Demo Application",
      "updated_at": "2021-09-30T08:56:25Z",
    },
  },
  Object {
    "code": "en",
    "id": "31d377e764d7d87928e45ade9a2f946a",
    "name": "English",
    "project": Object {
      "created_at": "2021-09-27T15:28:39Z",
      "id": "77617b5199af590fde8642fb4178eaa1",
      "main_format": null,
      "name": "My Demo Application",
      "updated_at": "2021-09-30T08:56:25Z",
    },
  },
  Object {
    "code": "en-US",
    "id": "0cd76a74f8850878c9e1ac09fa22925e",
    "name": "en-US",
    "project": Object {
      "created_at": "2021-09-27T15:28:39Z",
      "id": "77617b5199af590fde8642fb4178eaa1",
      "main_format": null,
      "name": "My Demo Application",
      "updated_at": "2021-09-30T08:56:25Z",
    },
  },
  Object {
    "code": "fr-FR",
    "id": "dc48ed5185edc91dda0e7189e9b84614",
    "name": "fr-FR",
    "project": Object {
      "created_at": "2021-09-27T15:28:39Z",
      "id": "77617b5199af590fde8642fb4178eaa1",
      "main_format": null,
      "name": "My Demo Application",
      "updated_at": "2021-09-30T08:56:25Z",
    },
  },
  Object {
    "code": "kpe-GN",
    "id": "6800a1d9184db966c2a90edce0a225e9",
    "name": "kpe-GN",
    "project": Object {
      "created_at": "2021-09-27T15:28:39Z",
      "id": "77617b5199af590fde8642fb4178eaa1",
      "main_format": null,
      "name": "My Demo Application",
      "updated_at": "2021-09-30T08:56:25Z",
    },
  },
  Object {
    "code": "th-TH",
    "id": "9dcea644b6c57c09c69d1f54a3b571f0",
    "name": "th-TH",
    "project": Object {
      "created_at": "2021-09-27T15:28:39Z",
      "id": "77617b5199af590fde8642fb4178eaa1",
      "main_format": null,
      "name": "My Demo Application",
      "updated_at": "2021-09-30T08:56:25Z",
    },
  },
  Object {
    "code": "ur-PK",
    "id": "f01a2a99707324af611d5edefccdff14",
    "name": "ur-PK",
    "project": Object {
      "created_at": "2021-09-27T15:28:39Z",
      "id": "77617b5199af590fde8642fb4178eaa1",
      "main_format": null,
      "name": "My Demo Application",
      "updated_at": "2021-09-30T08:56:25Z",
    },
  },
]
`;

exports[`Locale api listLocales returns locales list 1`] = `
Array [
  Object {
    "code": "ar-MA",
    "created_at": "2021-09-27T15:28:44Z",
    "default": false,
    "id": "2ef1309cdd0b10a35b3978340ed2a8b7",
    "main": false,
    "name": "ar-MA",
    "plural_forms": Array [
      "zero",
      "one",
      "two",
      "few",
      "many",
      "other",
    ],
    "rtl": true,
    "source_locale": null,
    "updated_at": "2021-09-27T15:28:44Z",
  },
  Object {
    "code": "de-DE",
    "created_at": "2021-09-27T15:28:43Z",
    "default": false,
    "id": "4fafad4eb6557baf38d185cbd8511a39",
    "main": false,
    "name": "de-DE",
    "plural_forms": Array [
      "zero",
      "one",
      "other",
    ],
    "rtl": false,
    "source_locale": null,
    "updated_at": "2021-09-27T15:28:43Z",
  },
  Object {
    "code": "en-US",
    "created_at": "2021-09-27T15:28:43Z",
    "default": true,
    "id": "0cd76a74f8850878c9e1ac09fa22925e",
    "main": false,
    "name": "en-US",
    "plural_forms": Array [
      "zero",
      "one",
      "other",
    ],
    "rtl": false,
    "source_locale": null,
    "updated_at": "2021-09-27T15:28:43Z",
  },
  Object {
    "code": "en",
    "created_at": "2021-09-30T08:01:55Z",
    "default": false,
    "id": "31d377e764d7d87928e45ade9a2f946a",
    "main": false,
    "name": "English",
    "plural_forms": Array [
      "zero",
      "one",
      "other",
    ],
    "rtl": false,
    "source_locale": null,
    "updated_at": "2021-09-30T08:01:55Z",
  },
  Object {
    "code": "fr-FR",
    "created_at": "2021-09-27T15:28:44Z",
    "default": false,
    "id": "dc48ed5185edc91dda0e7189e9b84614",
    "main": false,
    "name": "fr-FR",
    "plural_forms": Array [
      "zero",
      "one",
      "other",
    ],
    "rtl": false,
    "source_locale": null,
    "updated_at": "2021-09-27T15:28:44Z",
  },
  Object {
    "code": "kpe-GN",
    "created_at": "2021-09-27T15:28:44Z",
    "default": false,
    "id": "6800a1d9184db966c2a90edce0a225e9",
    "main": false,
    "name": "kpe-GN",
    "plural_forms": Array [
      "zero",
      "one",
      "two",
      "few",
      "many",
      "other",
    ],
    "rtl": false,
    "source_locale": null,
    "updated_at": "2021-09-27T15:28:44Z",
  },
  Object {
    "code": "ru",
    "created_at": "2021-09-30T08:03:59Z",
    "default": false,
    "id": "841099c7c4597555044959f464888d88",
    "main": false,
    "name": "Russian",
    "plural_forms": Array [
      "zero",
      "one",
      "few",
      "many",
      "other",
    ],
    "rtl": false,
    "source_locale": null,
    "updated_at": "2021-09-30T08:03:59Z",
  },
  Object {
    "code": "th-TH",
    "created_at": "2021-09-27T15:28:44Z",
    "default": false,
    "id": "9dcea644b6c57c09c69d1f54a3b571f0",
    "main": false,
    "name": "th-TH",
    "plural_forms": Array [
      "zero",
      "other",
    ],
    "rtl": false,
    "source_locale": null,
    "updated_at": "2021-09-27T15:28:44Z",
  },
  Object {
    "code": "ur-PK",
    "created_at": "2021-09-27T15:28:44Z",
    "default": false,
    "id": "f01a2a99707324af611d5edefccdff14",
    "main": false,
    "name": "ur-PK",
    "plural_forms": Array [
      "zero",
      "one",
      "other",
    ],
    "rtl": true,
    "source_locale": null,
    "updated_at": "2021-09-27T15:28:44Z",
  },
]
`;

exports[`Locale api updateLocale updates locale and returns locale data 1`] = `
Object {
  "code": "ru",
  "created_at": "2021-09-30T08:33:26Z",
  "default": false,
  "id": "38dbf68906d0e5ab468eaef7d6d1a8ae",
  "main": false,
  "name": "RussianLanguage",
  "plural_forms": Array [
    "zero",
    "one",
    "few",
    "many",
    "other",
  ],
  "rtl": false,
  "source_locale": null,
  "statistics": Object {
    "keys_total_count": 18,
    "keys_untranslated_count": 18,
    "missing_words_count": 23,
    "translations_completed_count": 0,
    "translations_unverified_count": 0,
    "unverified_words_count": 0,
    "words_total_count": 0,
  },
  "updated_at": "2021-09-30T08:42:47Z",
}
`;
